--- a/2ParciaRegistroConDetallel-Aplicada1-1-2020/MainWindow.xaml
+++ b/2ParciaRegistroConDetallel-Aplicada1-1-2020/MainWindow.xaml
@@ -29,24 +29,101 @@
 
         <!--Datagrid-->
 
-
-        <StackPanel Grid.Row="7" Grid.Column="2" Margin="0,4,0,0" Grid.RowSpan="2">
-            <Button x:Name="RemoverButton" Content="Remover" HorizontalContentAlignment="Right" FontSize="16" Width="87">
-                <Button.Background>
-                    <ImageBrush ImageSource="/Resources/Remover.png" Stretch="Uniform" AlignmentX="Left"/>
-                </Button.Background>
-
-            </Button>
+        <StackPanel Grid.Row="0" Grid.Column="0">
+            <Label Content="LLamadasId" FontSize="14"/>
+        
 
         </StackPanel>
 
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            <Label Content="Descripcion" FontSize="14"/>
+            
+        </StackPanel>
 
-        <StackPanel Grid.Row="7" Grid.Column="0" Margin="0,4,0,0" Grid.RowSpan="2">
-            <Button x:Name="AgregarButton" Content="Agregar" HorizontalContentAlignment="Right" FontSize="16" Width="75">
+        <StackPanel Grid.Row="3" Grid.Column="0">
+            <Label Content="Problema" FontSize="14"/>
+        </StackPanel>
+        
+        <StackPanel Grid.Row="4" Grid.Column="0">
+            <Label Content="Solucion" FontSize="14"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="0" Grid.Column="1" >
+            <TextBox x:Name="LLamadasIdTex" Height="26">
+                <TextBox.Text>
+                    <Binding Path="LlamadasId" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+                
+                
+            </TextBox>
+            
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Grid.Column="1">
+            <TextBox x:Name="DescripcionTex" Height="26">
+                <TextBox.Text>
+                    <Binding Path="Descripcion" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+        </StackPanel>
+
+        <StackPanel Grid.Row="3" Grid.Column="1">
+            <TextBox x:Name="ProblemaTex" Height="26">
+                <TextBox.Text>
+                    <Binding Path="Problema" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+
+            </TextBox>
+        </StackPanel>
+
+        <StackPanel Grid.Row="4" Grid.Column="1">
+            <TextBox x:Name="SolucionTex" Height="26">
+                <TextBox.Text>
+                    <Binding Path="Solucion" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+        </StackPanel>
+
+        <StackPanel Grid.Row="7" Grid.Column="1">
+            <DataGrid x:Name="DataGriDetalle" Height="167" >
+                <DataGrid.ItemsSource>
+                    <Binding Path="LlamadaDetalle" UpdateSourceTrigger="PropertyChanged" Mode="TwoWay">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </DataGrid.ItemsSource>
+
+            </DataGrid>
+        </StackPanel>
+
+        <StackPanel Grid.Row="7" Grid.Column="2" Margin="0,4,0,0" Grid.RowSpan="2">
+            <Button x:Name="RemoverButton" Content="Remover" HorizontalContentAlignment="Right" FontSize="16" Width="87" Click="RemoverButton_Click">
                 <Button.Background>
-                    <ImageBrush ImageSource="/Resources/Agregar.png" Stretch="Uniform" AlignmentX="Left"/>
+                    <ImageBrush ImageSource="/Resources/Remover.png" Stretch="Uniform" AlignmentX="Left"/>
                 </Button.Background>
+            </Button>
+        </StackPanel>
 
+
+        <StackPanel Grid.Row="4" Grid.Column="2" Margin="0,4,0,0" Grid.RowSpan="2">
+            <Button x:Name="AgregarButton" Content="Agregar" HorizontalContentAlignment="Right" FontSize="16" Width="75" Click="AgregarButton_Click">
             </Button>
 
         </StackPanel>
@@ -56,7 +133,7 @@
             <StackPanel.Background>
                 <ImageBrush/>
             </StackPanel.Background>
-            <Button x:Name="BuscarButton" Content="Buscar" HorizontalContentAlignment="Right" FontSize="16" Width="75">
+            <Button x:Name="BuscarButton" Content="Buscar" HorizontalContentAlignment="Right" FontSize="16" Width="75" Click="BuscarButton_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/Resources/Buscar.png" Stretch="Uniform" AlignmentX="Left"/>
                 </Button.Background>
@@ -66,7 +143,7 @@
 
         </StackPanel>
         <StackPanel Grid.Row="7" Grid.Column="0" Margin="0,166,0,0" Grid.RowSpan="2">
-            <Button x:Name="NuevoButton" Content="Nuevo" HorizontalContentAlignment="Right" FontSize="16" Width="87">
+            <Button x:Name="NuevoButton" Content="Nuevo" HorizontalContentAlignment="Right" FontSize="16" Width="87" Click="NuevoButton_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/Resources/Nuevo.png" Stretch="Uniform" AlignmentX="Left"/>
                 </Button.Background>
@@ -76,7 +153,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="7" Grid.Column="1" Margin="0,166,0,0" Grid.RowSpan="2">
-            <Button x:Name="GuardaButton" Content="Guardar" HorizontalContentAlignment="Right" FontSize="16" Width="91">
+            <Button x:Name="GuardaButton" Content="Guardar" HorizontalContentAlignment="Right" FontSize="16" Width="91" Click="GuardaButton_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/Resources/Guardar.png" Stretch="Uniform" AlignmentX="Left"/>
                 </Button.Background>
@@ -93,8 +170,6 @@
             </Button>
 
         </StackPanel>
-
-
 
     </Grid>
 </Window>
